# naturalistic-social-analysis

./: .gitignore  .pre-commit-config.yaml  .pre_commit-config.yml  README.md  config.py  main.py  pyproject.toml  pyproject_backup.toml  results.json  settings.toml
.devcontainer/: Dockerfile  devcontainer.json  init_setup.sh  install_poetry.sh  setup_environment.sh
.github/workflows/: linting.yml  python-app.yml
cognitive_tasks/data/: data.csv
cognitive_tasks/scripts/: cognitive_tasks.qmd
docs/: conf.py  config.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  social_interactions.html
docs/_sources/: config.rst.txt  index.rst.txt  social_interactions.rst.txt
notebooks/: annotation_visualization.ipynb  cognitive_data_id_check.ipynb  copy_annotated_videos.ipynb  data_exploration.ipynb  face_detection_visualization.ipynb  face_detections_analysis.ipynb  feature_extraction_video_prep.ipynb  fiftyone_visualization.ipynb  onnx_model_inspection.ipynb  pose_estimation.ipynb  prepare_audio_cls_data.ipynb  prepare_audio_data_vtc.ipynb  proximity.ipynb  quantex_age_splits.ipynb  quantex_glmm.ipynb  quantex_proximity.ipynb  quantex_results.ipynb  superannotate_data_check.ipynb  taat_check.ipynb  task_metadata.ipynb  train_vtc.ipynb  vtc_evaluation.ipynb  yolo_detections_analysis.ipynb  yolo_detections_visualization.ipynb  yolo_face.ipynb  yolo_visualization.ipynb
output/: results.json
paper/: Activity_Classification_bibliography.bib  ChildLens_paper Kopie.tex  ChildLens_paper.Rmd  ChildLens_paper.docx  ChildLens_paper.tex  Quantex_interaction_paper.Rmd  Quantex_interaction_paper.tex  bibliography.bib  object_test_results.csv  quantex_results.R  quantex_results.Rmd  quantex_share_data_sheet.csv  quantex_share_data_sheet.numbers  quantex_share_data_sheet.xlsx  references.bib  subjects_quantex_share.csv  subjects_quantex_share.xlsx
paper/data/: ChildLens_data_sheet.csv  Quantex_data_sheet.csv  Quantex_data_sheet.xlsx  Quantex_subjects.csv  Quantex_subjects.xlsx  frames_per_subject.csv  interactions_04_df.csv  person_presence_03_df.csv  social_test_results.csv  toys_05_df.csv  utterance_01_df.csv  utterance_01a_df.csv  utterance_01b_df.csv  utterance_01c_df.csv  (+1 more)
papers/: Activity_Classification_bibliography.bib  ChildLens_paper.Rmd  ChildLens_paper.tex
shared/: utils.py  video_frame_dataset.py
src/: combined_detection.py  config.py  constants.py  install_sox_local.sh  main.py  output.txt  settings.toml  test.ipynb  utils.py
(+243 files in other folders)
