[tool.poetry]
name = "leuphana-IPE"
version = "0.1.0"
description = ""
authors = ["neleSuffo <163427736+neleSuffo@users.noreply.github.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
torch = "^2.2.2"
torchvision = "^0.17.2"
tqdm = "^4.66.2"
tensorflow = "^2.16.1"
matplotlib = "^3.8.4"
opencv-python = "^4.9.0.80"
librosa = "^0.10.1"
pydub = "^0.25.1"
moviepy = "^1.0.3"
speechrecognition = "^3.10.3"
dlib = "^19.24.4"
facenet-pytorch = "^2.5.3"
sphinx = "^7.3.7"
recommonmark = "^0.7.1"
soundfile = "^0.12.1"
pyarrow = "^16.0.0"
fastparquet = "^2024.2.0"
imutils = "^0.5.4"
lxml = "^5.2.2"
fiftyone = "^0.24.0"
dynaconf = "^3.2.5"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.system-dependencies]
global = ["sox"]